# ompdataperf

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  notes.md
eval/: Makefile  benchmark.py  download_dataset.sh
eval/src/BabelStream/: .gitignore  CMakeLists.txt
eval/src/BabelStream/build_syn/: CMakeCache.txt  cmake_install.cmake  omp_syn-stream
eval/src/BabelStream/src/omp_syn/: OMPStream.cpp
eval/src/RSBench/: .gitignore  Makefile  Makefile.fix  simulation_fix.c
eval/src/TeaLeaf/: CMakeLists.txt  build.sh
eval/src/TeaLeaf/src/omp/: cg.cpp
eval/src/TeaLeaf/src/omp_syn/: cg.cpp  cheby.cpp  diffuse_overload.cpp  jacobi.cpp  local_halos.cpp  pack_halos.cpp  ppcg.cpp  solver_methods.cpp
eval/src/XSBench/: .gitignore  Makefile  Makefile.fix  Simulation_fix.c
eval/src/bfs/: .gitignore  Makefile  bfs_fix.cpp
eval/src/cfd/: .gitignore  density  density_energy  makefile  momentum
eval/src/hotspot/: .gitignore  Makefile  hotspot_offload_synthetic  hotspot_openmp.cpp  hotspot_openmp_synthetic.cpp
eval/src/lud/: Makefile
eval/src/lud/base/: .gitignore
eval/src/lud/omp/: .gitignore  Makefile  Makefile.offload  Makefile.offload_syn  lud_omp.c  lud_omp_offload_syn  lud_omp_syn.c
eval/src/miniFE/src-openmp45/: .gitignore  Makefile
eval/src/miniFE/src-openmp45-opt/: Makefile  cg_solve.hpp
eval/src/miniFE/src-openmp45-opt-fix/: .gitignore  Makefile  Vector_functions.hpp  cg_solve.hpp  miniFE_info.hpp
eval/src/minifmm/: Makefile  Makefile.syn
eval/src/minifmm/omptarget/: flags.makefile  traversal.hh
eval/src/minifmm/omptarget_syn/: debug_flags.makefile  traversal.hh
eval/src/null/: Makefile
eval/src/nw/: .gitignore  Makefile  needle_offload_syn  needle_syn.cpp
eval/src/torture/: .gitignore  Makefile  torture.c  torture_fix.c
rocm-docker-image/: Dockerfile
src/: analyze.cc  analyze.hh  hash.hh  preload.cc  symbolizer.cc  symbolizer.hh  tool.cc
